# bazel-rollup

./: BUILD.bazel  README.md  WORKSPACE  package.json  rollup.config.js
src/: BUILD.bazel  app.ts  es6.bzl  index.html  rollup.bzl
src/treeview/: BUILD.bazel  directory.ts  treeview-demo.component.ts  treeview.component.scss  treeview.component.ts  treeview.module.ts
tools/: bazel.rc
