package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

filegroup(
    name = "node_modules",
    srcs = glob([
        "node_modules/@angular/**",
        "node_modules/rollup/**",
        "node_modules/typescript/**",
        "node_modules/uglify-js/**",
        "node_modules/lite-server/**",
        "node_modules/zone.js/dist/zone.min.js",
        "rollup.config.js"
    ]),
)
