package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = ["//src/treeview", "@rxjs"],
)

load(":es6.bzl", "es6")

es6(
    name = "es6_output",
    deps = [":src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "rollup",
    entry_point = "rollup/bin/rollup",
    data = [
        "//:rollup.config.js",
        ":es6_output"
    ]
 )

nodejs_binary(
    name = "es5",
    entry_point = "typescript/bin/tsc"
)

nodejs_binary(
    name = "uglify",
    entry_point = "uglify-js/bin/uglifyjs"
)

load(":rollup.bzl", "rollup")
rollup(
    name = "bundle",
    entry_point = "main.js"
)

# Lite-Server Server Related

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zone.js",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

nodejs_binary(
    name = "web",
    entry_point = "lite-server/bin/lite-server",
    templated_args = ["--baseDir", "src"],
    data = [
        ":zone.min.js",
        ":index.html",
        ":bundle.js"
    ]
)
